--- a/superStyle.css
+++ b/superStyle.css
@@ -7,13 +7,16 @@
 .scFavorites tr:hover{
 	background-color:darkslategrey;
 }
+.scFavorites tr:hover .neon{
+	background-color:darkblue;
+}
 
 .scFavorites p{
 	font-size:18px;
-	
+
 	font-weight:bold;
 	font-style:italic;
-	
+
 	margin-left:20px;
 }
 
@@ -192,13 +195,13 @@
     position: absolute; top: 0; bottom: 0;
     right: 41px;
     border: 2px solid #999999; border-radius: 20px;
-    transition: all 0.3s ease-in 0s; 
+    transition: all 0.3s ease-in 0s;
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
     margin-left: 0;
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-    right: 0px; 
+    right: 0px;
 }
 /***END ON OFF SWITCH**/
 
@@ -208,9 +211,9 @@
     padding: 10px;
     /*margin-bottom: 15px;*/
     margin-top: 20px;
-	left:45%;
+		left:45%;
     border-radius: 10px;
-	
+
     width: 200px;
     position: fixed;
     z-index: 2000;
@@ -219,6 +222,22 @@
     color: #468847;
     font-weight: bold;
 }
+
+.bottomRightAlert{
+		right:10%;
+    border-radius: 10px;
+		margin-bottom: 20px;
+		bottom: 10px;
+		padding: 10px;
+    width: 200px;
+    position: fixed;
+    z-index: 2000;
+    text-align: center;
+    background-color: #DFF0D8;
+    color: #468847;
+    font-weight: bold;
+}
+
 /***END Notification***/
 .movTable {
 	width:100%
